# shield

./: .gitignore  NOTES.md  README.md  pyproject.toml  setup.cfg
shield/: main.py
src/: main.py
