[metadata]
name = shield
author = T. Austin Kelley
author_email = hxyz@protonmail.com
description = Read the Bible in your terminal
long_description = file:README.md
long_description_content_type = test/markdown
url = github.com/takelley1/shield
license = GNU General Public License v3 (GPLv3)
keywords = bible, terminal, python
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Education
    Topic :: Religion
    Intended Audience :: End Users/Desktop

[options]
packages = shield
include_package_data = True
install_requires =
  urwid
  pyyaml
  python_version >= "3.9"

[options.entry_points]
console_scripts =
  shield = shield.main:main
